# Grocery_Lister

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  watchlist.example.yaml
app/: __init__.py  config.py  db.py  deals.py  distill.py  habits.py  harvest.py  http.py  kroger.py  llm.py  main.py  models.py  pipeline.py  preferences.py  pricing.py  watchlist.py
app/outputs/: __init__.py  base.py  email.py  todoist.py
scripts/: find_location.py
tests/: test_config.py  test_db.py  test_distill.py  test_email.py  test_habits.py  test_harvest.py  test_kroger.py  test_llm.py  test_main.py  test_pipeline.py  test_preferences.py  test_pricing.py  test_todoist.py  test_watchlist.py
tests/fixtures/: kroger_products.json
