[project]
name = "weekly-deal-watcher"
version = "0.1.0"
description = "Weekly Kroger deal watcher that publishes selected deals to Todoist or email."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
